syntax = "proto3";

package pets;

option go_package = "github.com/qwertyp4nts/pets-grpc/proto/v1beta1/pets";

import "google/protobuf/timestamp.proto";

service PetsAPI {
  rpc GetPet(GetPetRequest) returns (GetPetResponse) {}
  rpc GetPets(GetPetsRequest) returns (GetPetsResponse) {}

  rpc UpdatePet(UpdatePetRequest) returns (UpdatePetResponse) {}
}

// GetPetRequest defines the request for fetching a pet by ID from a database of pets.
message GetPetRequest {
  int32 id = 1;
}

// GetPetResponse defines the response for fetching a pet by ID from a database of pets.
message GetPetResponse {
  Pet pet = 1;
  google.protobuf.Timestamp last_updated = 2;
}

// GetPetRequest defines the request for fetching all pets from a database of pets.
message GetPetsRequest {}

// GetPetsResponse defines the response for fetching all pets from a database of pets.
message GetPetsResponse {
  repeated Pet pet = 1; // array!
}

// Pet defines ...
message Pet {
  string id = 1;
  string type = 2;
  string breed = 3;
  int32 risk = 4;
}

message UpdatePetRequest {
  Pet pet = 1;
}

message UpdatePetResponse {
  //empty, or could return the pet resource
}
